# next

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_BEHAVIORAL.md  README.md  ROADMAP.md  current_state.txt  docker-compose.yml  prd.txt  project_structure.txt  pyproject.toml  requirements.txt  streamlit_app.py
.scripts/: SMOKE.md  install-torch-cu128.sh  next.sh  seed_demo.py  smoke_e2e.py  submit-and-watch.sh  test-dataset-ref.sh
app/: config.py  main.py  run_worker.py
app/gpu/: manager.py
app/job/: store.py
app/rabbitmq/: publisher.py
docs/: USER_GUIDE.md
documents/: ms-swift-readme.md
tests/: conftest.py  test_api.py  test_api_evals.py  test_api_models.py  test_auto_eval_hook.py  test_cli.py  test_compliance_forget.py  test_dataset_formats.py  test_dataset_paths.py  test_dataset_refs.py  test_db.py  test_eval_e2e.py  test_eval_metrics_bleu.py  test_eval_metrics_exact_match.py  test_eval_metrics_more.py  test_eval_mlflow_logging.py  test_eval_repository.py  test_eval_runner.py  test_inference.py  test_mcp_module.py  test_phase10_labelstudio.py  test_phase11_active_learning.py  test_phase12_pipelines.py  test_phase13_dpo.py  test_phase14_synth.py  test_phase15_pii.py  test_phase16_versioning.py  test_phase17_watches.py  test_phase18_distributed.py  test_phase19_quantize.py  test_phase20_cost.py  test_phase21_tokens.py  test_phase22_acquisition.py  test_phase9_multimodal.py  test_pretraining.py  test_repository.py  test_schemas.py  test_search_spaces.py  test_study_manager.py  test_swift_builder.py  (+2 more)
trainpipe/: cli.py  client.py  mcp.py  settings.py
(+97 files in other folders)
