[project]
name = "trainpipe"
version = "0.1.0"
description = "AI training pipeline: FastAPI + SQLite + MLflow + Optuna over ms-swift"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "aiosqlite>=0.20",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "pynvml>=11.5",
    "mlflow>=2.16",
    "optuna>=4.0",
    "httpx>=0.27",
    "sse-starlette>=2.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
training = ["ms-swift>=3.0.3"]
mcp = ["mcp>=1.0"]
# Better HTML main-text extraction for the acquisition module's web phase.
# Optional: the module degrades to a built-in tag-stripping extractor when
# trafilatura isn't installed.
acquisition = ["trafilatura>=1.8"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
trainpipe = "trainpipe.cli:main"
trainpipe-mcp = "trainpipe.mcp:main"
trainpipe-forget = "trainpipe.compliance.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trainpipe"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
